<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fff"
            android:clipToPadding="false"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/item_details_title"
                style="@style/style_add_edit_fragment_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_item_details_title_fragment_add_edit_grocery_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/price_view"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/item_details"
                style="@style/AddEditFragmentContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:focusable="true"
                android:gravity="clip_vertical"
                android:hint="Enter items"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLines="1"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:scrollbars="vertical"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/item_details_title"
                app:layout_constraintTop_toBottomOf="@id/item_details_title" />

            <View
                android:id="@+id/mass_view"
                style="@style/DividerStyle"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_details" />

            <TextView
                android:id="@+id/item_mass_title"
                style="@style/style_add_edit_fragment_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_item_mass_of_each_title_fragment_add_edit_grocery_list"
                app:layout_constraintEnd_toStartOf="@+id/radio_group_mass_unit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mass_view" />

            <RadioGroup
                android:id="@+id/radio_group_mass_unit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@id/item_mass_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/item_mass_title">

                <RadioButton
                    android:id="@+id/radio_btn_mass_kg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/text_item_radio_btn_kilogram_fragment_add_edit_grocery_list" />

                <RadioButton
                    android:id="@+id/radio_btn_mass_g"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_item_radio_btn_gram_fragment_add_edit_grocery_list" />
            </RadioGroup>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_mass_weight"
                style="@style/AddEditFragmentContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:hint="20"
                android:inputType="numberDecimal"
                android:maxEms="15"
                android:maxLines="1"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@+id/item_mass_title" />

            <View
                android:id="@+id/price_view"
                style="@style/DividerStyle"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_mass_weight" />


            <TextView
                android:id="@+id/item_price_title"
                style="@style/style_add_edit_fragment_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_item_price_for_each_title_fragment_add_edit_grocery_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/price_view" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/item_price"
                style="@style/AddEditFragmentContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:hint="200"
                android:inputType="numberDecimal"
                android:maxEms="14"
                android:maxLines="1"
                android:minWidth="72dp"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@+id/item_price_title" />

            <View
                android:id="@+id/number_of_items_view"
                style="@style/DividerStyle"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_price" />

            <TextView
                android:id="@+id/number_of_items_title"
                style="@style/style_add_edit_fragment_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_number_of_items_title_fragment_add_edit_grocery_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/number_of_items_view" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_number_of_items"
                style="@style/AddEditFragmentContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:maxEms="14"
                android:maxLength="8"
                android:maxLines="1"
                android:minHeight="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/number_of_items_title"
                tools:ignore="LabelFor" />


            <ImageButton
                android:id="@+id/decrement_number_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:hapticFeedbackEnabled="true"
                android:padding="8dp"
                android:src="@drawable/ic_remove_black"
                app:layout_constraintBottom_toBottomOf="@id/input_number_of_items"
                app:layout_constraintEnd_toStartOf="@+id/input_number_of_items"
                app:layout_constraintTop_toTopOf="@id/input_number_of_items" />

            <ImageButton
                android:id="@+id/increment_number_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@android:color/transparent"
                android:hapticFeedbackEnabled="true"
                android:padding="8dp"
                android:src="@drawable/ic_add_black"
                app:layout_constraintBottom_toBottomOf="@id/input_number_of_items"
                app:layout_constraintStart_toEndOf="@id/input_number_of_items"
                app:layout_constraintTop_toTopOf="@id/input_number_of_items" />


            <View
                android:id="@+id/category_view"
                style="@style/DividerStyle"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_number_of_items" />

            <TextView
                android:id="@+id/category_title"
                style="@style/style_add_edit_fragment_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_item_category_title_fragment_add_edit_grocery_list"
                app:layout_constraintTop_toBottomOf="@id/category_view" />

            <TextView
                android:id="@+id/category"
                style="@style/AddEditFragmentContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                app:drawableEndCompat="@drawable/ic_arrow_drop_down_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/category_title"
                tools:text="Food and beverages" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/text_save_btn_fragment_add_edit_grocery_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/category" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/add_edit_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:navigationIcon="@drawable/ic_arrow_back_white"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>